<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/FromStation"
        android:layout_width="136dp"
        android:layout_height="22dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/label_btn_2"
        android:gravity="center"
        android:text="@string/fromStation"
        android:textColor="@color/labelColor"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="272dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:prompt="@string/src_prompt" />

    <TextView
        android:id="@+id/ToStation"
        android:layout_width="136dp"
        android:layout_height="22dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/label_btn_2"
        android:gravity="center"
        android:text="@string/fromStation"
        android:textColor="@color/labelColor"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="272dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" 
        android:prompt="@string/desc_prompt"/>

    <TextView
        android:id="@+id/timeBetween"
        android:layout_width="170dp"
        android:layout_height="22dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/label_btn_2"
        android:gravity="center"
        android:text="@string/timeBetween"
        android:textColor="@color/labelColor"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/insideLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="94dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" 
            android:prompt="@string/time_prompt">

            <requestFocus />
        </Spinner>

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="94dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" 
            android:prompt="@string/times_prompt">
        </Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/findTrains" 
        android:textColor="@color/labelColor"/>

</LinearLayout>